--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "instamojo/instamojo-php": "^1.0",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^11.3",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
